--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: utila
-description: A new Flutter package project.
+description: Utility pack project.
 version: 0.0.1
 homepage:
 
@@ -13,21 +13,25 @@ dependencies:
 
   #===================
   
-  cupertino_icons: ^1.0.2
-  flutter_dotenv: ^5.0.2
-  shared_preferences: ^2.1.0
-  cloud_firestore: ^4.7.1
+  #firebase_core: ^2.13.0
+  #cloud_firestore: ^4.7.1
+  #firebase_auth: ^4.6.1
+  #firebase_storage: ^11.2.1
+
+  #cupertino_icons: ^1.0.2
+  #flutter_dotenv: ^5.0.2
+  #shared_preferences: ^2.1.0
+
   intl_phone_number_input: ^0.7.3+1
   country_list_pick: ^1.0.1+6
-  flutter_typeahead: ^4.4.0
-  url_launcher: ^6.1.11
-  firebase_auth: ^4.6.1
-  pin_code_fields: ^7.4.0
-  firebase_core: ^2.13.0
-  firebase_storage: ^11.2.1
+  #pin_code_fields: ^7.4.0
+  #pinput: ^2.2.31
+
+  #url_launcher: ^6.1.11
+
   provider: ^6.0.5
   path_provider: ^2.0.15
-  pinput: ^2.2.31
+
   image_picker: ^0.8.7+5
   country_picker: ^2.0.20
   contacts_service: ^0.6.3
@@ -35,23 +39,15 @@ dependencies:
   permission_handler: ^10.2.0
   phone_number: ^2.0.0
   package_info: ^2.0.2
-  #flutter_localization: ^0.1.11
   #
-  badges: ^3.1.1
-  zego_uikit_prebuilt_call: ^3.8.0
-  zego_uikit_signaling_plugin: ^2.1.10
-  zego_zimkit: ^1.3.1
-  zego_zim: ^2.7.1
-  zego_uikit: ^2.5.12
-  zego_zpns: ^2.2.0
+
+
   collection: ^1.17.1
   flutter_branch_sdk: ^6.6.0
-  in_app_update: ^4.1.1
+  #in_app_update: ^4.1.1
   platform: ^3.1.0
-  in_app_review: ^2.0.6
-  #
-  #agora_chat_sdk: ^1.1.1
-  connectivity: ^3.0.6
+  #in_app_review: ^2.0.6
+  #connectivity: ^3.0.6
   #===================
 
 dev_dependencies:
