--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   #firebase_storage: ^11.2.1
 
   #cupertino_icons: ^1.0.2
-  #flutter_dotenv: ^5.0.2
+  flutter_dotenv: ^5.0.2
   #shared_preferences: ^2.1.0
 
   intl_phone_number_input: ^0.7.3+1
