--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: utila
 description: Utility pack project.
 version: 0.0.1
 homepage:
+publish_to: none
 
 environment:
   sdk: '>=3.0.5 <4.0.0'
@@ -19,33 +20,40 @@ dependencies:
   #firebase_storage: ^11.2.1
 
   #cupertino_icons: ^1.0.2
-  flutter_dotenv: ^5.0.2
+  
   #shared_preferences: ^2.1.0
 
-  intl_phone_number_input: ^0.7.3+1
-  country_list_pick: ^1.0.1+6
+  ###flutter_dotenv: ^5.0.2
+  ###intl_phone_number_input: ^0.7.3+1
+  ###country_list_pick: ^1.0.1+6
+
+
   #pin_code_fields: ^7.4.0
   #pinput: ^2.2.31
 
   #url_launcher: ^6.1.11
 
-  provider: ^6.0.5
-  path_provider: ^2.0.15
+  ###provider: ^6.0.5
+  ###path_provider: ^2.0.15
 
-  image_picker: ^0.8.7+5
-  country_picker: ^2.0.20
-  contacts_service: ^0.6.3
-  fluttertoast: ^8.2.2
-  permission_handler: ^10.2.0
-  phone_number: ^2.0.0
-  package_info: ^2.0.2
+  ###image_picker: ^0.8.7+5
+  ###country_picker: ^2.0.20
+  ###contacts_service: ^0.6.3
+  ###fluttertoast: ^8.2.2
+  ###permission_handler: ^10.2.0
+  ###phone_number: ^2.0.0
+  ###package_info: ^2.0.2
   #
+  savaser:
+    path: ../savaser
+    
+  #  path: https://github.com/igefadele/savaser.git
 
 
-  collection: ^1.17.1
-  flutter_branch_sdk: ^6.6.0
+  ###collection: ^1.17.1
+  ###flutter_branch_sdk: ^6.6.0
   #in_app_update: ^4.1.1
-  platform: ^3.1.0
+  ###platform: ^3.1.0
   #in_app_review: ^2.0.6
   #connectivity: ^3.0.6
   #===================
@@ -55,10 +63,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
 
   # To add assets to your package, add an assets section, like this:
